[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preview"
version = "1.0.0"
description = "A Claude Code command to preview and export responses as PDF, DOCX, or HTML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Muhammad Abdullah", email = "ranahaani@gmail.com"}]
keywords = ["claude-code", "markdown", "preview", "pdf", "docx", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "markdown>=3.5",
    "pygments>=2.17",
    "weasyprint>=60.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
preview = "preview.cli:main"

[tool.setuptools.packages.find]
include = ["preview*"]

[project.urls]
Homepage = "https://github.com/ranahaani/preview"
Repository = "https://github.com/ranahaani/preview"
Issues = "https://github.com/ranahaani/preview/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S603", "S607"]
